--- a/vite-react-template/.prettierignore
+++ b/vite-react-template/.prettierignore
@@ -1,12 +1,7 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
+# Ignore artifacts:
+build
+coverage
+dist
 node_modules
 dist
 dist-ssr
@@ -22,4 +17,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
