--- a/ia03-be/.gitignore
+++ b/ia03-be/.gitignore
@@ -1,5 +1,6 @@
 # compiled output
 /dist
+/public
 /node_modules
 /build
 
@@ -54,3 +55,4 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+.vercel
