--- a/ia03-be/tsconfig.json
+++ b/ia03-be/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@app/*": ["src/*"],
       "@database/*": ["lib/database/*"]
-    }
+    },
+    "esModuleInterop": true
   }
 }
