--- a/ia03-be/tsconfig.json
+++ b/ia03-be/tsconfig.json
@@ -19,7 +19,7 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@app/*": ["src/*"],
-      "@database/*": ["lib/database/*"]
+      "@prisma/*": ["prisma/*"]
     },
     "esModuleInterop": true
   }
